Process Hacker

1.3.9.0
 * NEW/IMPROVED:
   * Ability to set DEP status of processes in other sessions

1.3.8.5
 * NEW/IMPROVED:
   * Full support for Windows Vista SP2
   * Users/sessions list
   * Window process finder
   * Thread wait analysis - right-click a thread and choose 
     Analyze > Wait to see what a thread is hanging on
   * Added ability to create dump files for processes
   * Added ability to detach processes from debuggers
   * Added "scroll down process tree on startup" option
   * Notification icon process list is now sorted
   * Lists are dramatically faster (especially the handle list)
   * Detailed handle properties
   * Event objects can now be modified - set, clear, pulse, reset
   * Event pair objects can now be modified - set high, set low
   * Semaphore objects can now be modified - acquire, release
   * Statistics for token objects
   * Token object names now include their session LUIDs
   * Added Shift+Del for Terminate Process Tree
 * FIXED:
   * #2795871 - "Hidden Processes window resizing problem"
   * #2800710 - "System.ObjectDisposedException"
   * Windows 7 RC BSOD (Windows 7 Beta is no longer supported) at
     startup; support is STILL EXPERIMENTAL
   * Memory search addresses being in decimal
   * Disabling "Warn about dangerous actions" now disables all 
     process-related prompts
   * Terminator window would be hidden if the main window was top-most
   * Using the keyboard (Up/Down/Left/Right) in the process list was fixed
   * Potential BSOD with KphReadVirtualMemory and KphWriteVirtualMemory 
     due to incorrect address probing
   * Get Function Address window would return incorrect hex addresses

1.3.8.0
 * NEW/IMPROVED:
   * KProcessHacker can now perform process memory reading/writing 
     by itself and does not require MmCopyVirtualMemory
   * KProcessHacker can now bypass all handle-opening protections
   * Experimental process protection feature