@@ -3,6 +3,9 @@ Process Hacker
 1.3.9.0
  * NEW/IMPROVED:
    * Ability to set DEP status of processes in other sessions
+ * FIXED:
+   * Broken system thread start addresses due to sign-extending 
+     instead of zero-extending pointers
 
 1.3.8.5
  * NEW/IMPROVED:
